import "goby/common/protobuf/zero_mq_node_config.proto";

package goby.protobuf;

message InterProcessPortalConfig
{
    required string platform = 1;
    
    enum Transport
    {
        IPC = 2;
        TCP = 3;
    };

    optional Transport transport = 2 [default = IPC];
    optional string socket_name = 3;
    optional string ipv4_address = 4 [default="127.0.0.1"];
    optional uint32 tcp_port = 5 [default = 11144];

    optional uint32 manager_timeout_seconds = 10 [default = 1];
}


enum Request
{
    PROVIDE_PUB_SUB_SOCKETS = 1;
}

message ZMQManagerRequest
{
    required Request request = 1;
}

message ZMQManagerResponse
{
    required Request request = 1;
    optional goby.common.protobuf.ZeroMQServiceConfig.Socket publish_socket = 2;
    optional goby.common.protobuf.ZeroMQServiceConfig.Socket subscribe_socket = 3;
}
